--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -1,471 +1,388 @@
-*{
+/* Reset CSS básico */
+
+/* Selector universal */
+* {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
- 
- 
-}
-:root{
-    --bg-color-fondo: red;
+    box-sizing: border-box; /* Asegura que el tamaño especificado incluya el relleno y el borde */
 }
 
-    
+/* Establece un tamaño de fuente base para una mejor consistencia */
+html {
+    font-size: 16px; /* Tamaño base de la fuente (ajusta según tus preferencias) */
+}
+
+/* Evita que los elementos en línea creen espacios adicionales */
+body, h1, h2, h3, h4, h5, h6, p, ul, ol, li, dl, dt, dd, blockquote, figure, fieldset, legend, textarea, pre {
+    margin: 0;
+    padding: 0;
+}
+
+/* Evita que los elementos de lista pierdan el estilo de lista */
+ul, ol {
+    list-style: none;
+}:root {
+    --color-nav: #ffffff; /* Color para la barra de navegación */
+    --color-fondo: #f2f2f2; /* Color de fondo general */
+    --color-fondo2:rgb(7, 7, 7)2; /* Color de fondo general */
+    --color-primario: #3498db; /* Color primario */
+    --color-secundario: #d8800e; /* Color secundario */
+    --color-secundario2: #54c409; /* Color secundario */
+    --color-texto: #333333; /* Color de texto principal */
+}
+
 
 
 body{
-    /* max-width: 1024px; */
+
+   box-sizing: border-box;
     margin-left: auto;
     margin-right: auto;
-    padding-top: auto;
-    padding-bottom: auto;
+    header{
+        background:linear-gradient(var(--color-texto),var(--color-primario));
+        width: 100%;
+        height: 8em;
+        top: 0;
+        position: fixed;
+        
+        text-align: center;
+        box-sizing: border-box;
+        box-shadow: 0px 1px 1px 2px rgb(rgb(88, 86, 86), rgb(219, 219, 219), rgb(52, 52, 80));
+        color: var(--color-nav);
+           span{
+               color: var(--color-secundario);
+           }
+       }
+    
+
+
+  main{
+    background-color: #333333;
+    color: #f2f2f2;
+    text-align: center;
     box-sizing: border-box;
-    overflow: auto;
+    margin-left: 2em;
+    margin-right: 2em;
+    margin-top: 12.5em;
+    border: 1px solid var(--color-primario);
+    border-radius: 0.8em;
+    margin-bottom: 2em;
+.contenedor{
+    background-color: #858585;
+    box-sizing: border-box;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    overflow:auto;
+    margin-bottom: 0em;
+     img{
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+        display: block;
+
+    }
+}
 }
 
-header{
-    background-color: black;
-    color: white;
-    width: 100%;
-    /* max-width: 1024px; */
-    height: 100px;
+footer{
+    margin-top: 10em;
+    height: 6em;
+    background:linear-gradient(var(--color-texto),var(--color-texto));
+    color: var(--color-fondo2);
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: auto;
-    padding-top: 2%;
-    box-sizing: border-box;
-    font-size: 100%;
-    font-weight: bold;
-    font-family: 'Times New Roman', Times, serif;
+    margin-bottom: 0em;
+    padding: 10px 0; 
+    color: var(--color-fondo);
+    
+    i{
+        color: var(--color-fondo);
+
+        font-size: 1.8em;
+
+    }
 }
-nav{
+}
+
+.nav{
+    background-color: var(--color-primario);
     width: 100%;
-    box-sizing: border-box;
-    background-color: black;
+    position: fixed;
+    top: 6em;
+    margin-top: 2em;
+    margin-bottom: 18em;
+    padding-bottom: 2em;
+    
     ul{
         display: flex;
-        justify-content: space-around;
-        align-items: center;
-    }
-    li{
-        /* background-color: var(--bg-color-fondo); */
-    list-style-type: none;
-    border: 1px solid red;
-    border-radius: 3px;
-    margin-bottom: 0.4em;
-    text-align: center;
-    padding: 1em;
+        justify-content: center;
+        flex-wrap: wrap;
+        padding: 0.1em;
     
-    a{
-        text-decoration: none;
-        color: rgb(255, 255, 255);
-        font-size: 100%;
-        font-weight: bold;
-        font-family: 'Times New Roman', Times, serif;
+        li{
+             /* Margen entre elementos de lista */
+             list-style-type: none;
+             margin: 0.3em 3.2em;  
+             padding: 0.1em;  
+             transition: background-color 0.3s ease; 
+             a{
+                border-radius: 0.2em;
+                text-decoration: none;
+                flex-direction: row;
+                color: var(--color-fondo);
+                padding: 1em;
+                
+            }
+        }
     }
-    &:hover{
-        background-color: #ed0000;
-        color: white;
-    }
+    
 }
-}
-
-
+li a:hover{
+    padding: 1em;
+    background-color: var(--color-secundario);
+    box-shadow: 1px 1px 0.1em 0.1em var(--color-nav);
+    transition: background-color 0.3s ease; /* Transición suave para el color de fondo */
+} 
 
 .container{
     width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: auto;
-    margin-left: 2%;
-    margin-right: 2%;
-    padding-right: 15%;
-    padding-left: 8%;
-    box-sizing: border-box;
-
-}
-footer{
-    background-color: black;
-    color: white;
-    width: 100%;
-    /* max-width: 1024px; */
-    height: 100px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: auto;
-    padding-top: 2%;
-    box-sizing: border-box;
-    font-size: 150%;
-    font-weight: bold;
-    font-family: 'Times New Roman', Times, serif;
-
-}
-/* PRODUCTOS SOLO PRODUCTOS EN ESTA LINEA PARA ABAJO */
-
-article{
-    width: 100%;
-    height: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: auto;
-    margin-left: 0%;
-    padding-left: 8%;
-    padding: 1em;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    box-sizing: border-box;
-    background-color: gray;
-    color: #f8f8f8;
-    border: 1px solid #ed0000;
-    border-radius: 5px;
-    font-size: 100%;
-}
-
-.section-productos{
-    padding-left: 1%;
-    /* margin-top:-5%; */
-    box-sizing: border-box;
-    background-color: gray;
-    color: #f8f8f8;
-    border: 1px solid #ed0000;
-    border-radius: 5px;
-    font-size: 100%;
-    width: 100%;
-   
-    
-    
-}
-.titulo-productos{
-    /* position: absolute; */
-    margin: 0.2em;
-    padding: 0.1em;
-    text-align: center;
-    
-}
-
-.card-container{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 0.1em;
     box-sizing: border-box;
     margin-left: auto;
     margin-right: auto;
-    width: 100%;  
-}
-
-.card{
-    border: 1px solid red;
-    margin: 1em;
-    padding: 1em;
-    width: 23%;
-    height: 34%;
-    border-radius: 5px;
-    box-sizing: border-box;
-    background-color: gray;
-    color: #f8f8f8;
-    font-size: 100%;
     
+}
+.business-info{
+    width: 100%;
+    overflow: auto;
     img{
-        width: 100%;        
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 0.5em;
-        margin-bottom: 0.5em;
-        border-radius: 5px;
-        padding: 0.1em;
-    }
-    li{
-        list-style-type: none;
-
-    }
-    
-}
-
-/* CONTENIDO DE INICIO DE GABY  */
-.indiose-title{
-    text-align: center;
-    position: relative;
-    top:-8.5em;
-    display: none;
-  
-}
-.section{
-    box-sizing: border-box;
-}
-.bienvenido{
-    text-align: center;
-    position: relative;
-    top:-14em;
-    margin: 1.5em;
-    padding: 1em;
-    padding: 2em;
-    padding-top: 2.8em;
-}
-.bienvenido-card{
-  color: #ed0000;
-  position: absolute;
-  top: -2.5em;
-  margin: 2em;
-  padding: 1em;
-  box-sizing: border-box;
-    
-}
-.parrafo-index{
-    /* background-color: #ed0000; */
-    padding: 2em;
-}
-
-
-/* ACA EMPIEZAMEL FORMULARIO STYLOS  */
-/* form{
-    text-align: center;
-    border: 1px solid red;
-    background-color: black;
-    color: #f8f8f8;
-    border-radius: 12px;
-    margin: 0.1em;
-    padding: 1.1em;
-    margin-top: -50.94mm;
-    width: 45%;
-    input{
-        padding: 0.9em;
-        display:block;
-        width: 90%;
-        border-radius: 10px;
-        padding: 0.9em;
-        margin-left: 0em;
-        margin-top: 0.1em;
-        margin-bottom: 0.1em;
-        text-align: center;
-
-    }
-   button{
-         padding: 1em;
-         margin-top: 0.9em;
-        border-radius: 4px;
-        border: 1px solid #ed0000;
-        background-color: #ed0000;
-        color: #f8f8f8;
-        font-size: 100%;
-        font-weight: bold;
-        font-family: 'Times New Roman', Times, serif;
-        width: 50%;
-        box-sizing: border-box;
-        margin-left: auto;
-        margin-right: auto;
-     }
-}
-.formulario-title{
-        position: absolute;
-        top: 7.5em;
-        color: #ed0000;
-} */
-/* 
-
-    .formulario-title{
-        background-color: aqua;
-        position: relative;
-        top: -14em;
-        left: 12.5em;
-
-} */
-form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 1px;
-    margin-bottom: 2px;
-    margin-left: 2px;
-    margin-right: 2px;
-    padding: 2px;
-    background-color: rgb(140, 136, 136);
-    border-radius: 10px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-    width: 350px;
-    height: 600px;
-    box-sizing: border-box;
-
-    .formulario-control{
-        display: block;      
-        width: 600px;
-        padding: 0.1em 0.1em;
-        color: brown;
-        text-align: center;
-
-    }
-    input{
-        height: 2.5em;
-        width: 50%;
-        border-radius: 7px;
-    }
-    label{
-        display: block;
-        width: 58%;
-        padding: 0.1em 0.1em;
-        color: brown;
-        text-align: center;
-        font-size: 1em;
-        position:relative;
-        top: 1.1em;
-        left: 0.5em;
-        font-weight: bold;
-        color: rgb(13, 13, 13);
-        z-index: 511;
-    }
-    button{
-        display: block;
-        width: 50%;
-        padding: 0.5em 0.1em;
-        color: rgb(238, 221, 221);
-        text-align: center;
-        font-size: 1em;
-        position:relative;
-        top: 0.5em;
-        left: -0.2em;
-        font-weight: bold;
-        color: rgb(13, 13, 13);
-        z-index: 511;
-        background-color: rgb(140, 136, 136);
-        border-radius: 10px;
-        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-        margin-top: 2px;
-        margin-bottom: 2px;
-        margin-left: 2px;
-    }
-
-}
-.contenedor{
-    background-color: rgb(114, 116, 115);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
-    margin-top: 2px;
-    margin-bottom: 2px;
-    margin-left: 2px;
-    margin-right: 2px;
-    padding: 2px;
-    border-radius: 10px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-    font-size: 1.5em;
-    font-weight: bold;
-    color: rgb(20, 20, 20);
-
-
-
-}
-
-
-/* APLICAO ESTILO A LOS BOTONES SI ES MENOR A 565 PX DE RESOLUCION ASI SE ACOMODAN EN BLOKES */
-
-/* FALTAS ACOMODAR LOS TEXTOS DE FORMULARIO SUCURSAL INICIO  eACER UN cORTE EN 570 */
-
-/* media queri 790 px*/
-@media (max-width:790px) {
-    /* .formulario-title{
-        background-color: rgb(103, 143, 143);
-        font-size: 1.2em;
-        position: relative;
-        top: -14.2em;
-        left: 12.8em; */
-/* 
-} */
-    
-}
-
-
-/* Media queri 565 px */
-@media (max-width: 565px) {
-    
-     nav{    
         width: 100%;
+        object-fit: cover;
+
+    }
+}
+
+/* *********formulario  */
+.mein{
+    margin-top: 14em;
+    margin-left: auto;
+    margin-right: auto;
+    padding: auto;
+    width: 40%;
+    height: 76vh;
+    background-color: var(--color-texto);
+    box-sizing: border-box;
+    border-radius: 0.4em;
+    box-shadow: 0em 0em 1.7em 0.8em var(--color-secundario);
+
+}
+.container-form{
+    width: 100%;
+    color: var(--color-fondo);
+    padding-top: 0.2em;
+    input,label,bottom{
+        display: block;
+        padding: 0.4em;
+        border-radius: 0.5em;
         box-sizing: border-box;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+#registroForm{
+    width: 100%;
+    text-align: center;
+    margin: 0.2em 0;
+
+}
+
+
+@media (max-width:794px) {
+    
+.nav{
+    background-color: var(--color-primario);
+    width: 100%;
+    position: fixed;
+    top: 6em;
+    margin-top: 2em;
+    margin-bottom: 28em;
+    padding-bottom: 2em;
+    
+    ul{
+        display: block;
+        justify-content: center;
+        width: 100%;
+        /* flex-wrap: wrap; */
+        padding: 1.1em;
+    
+        li{
+             /* Margen entre elementos de lista */
+             list-style-type: none;
+             margin: 1.3em 3.2em;  
+             padding: 0.1em;  
+             transition: background-color 0.3s ease; 
+             text-align: center;
+             a{
+                border-radius: 0.2em;
+                text-decoration: none;
+                flex-direction: column;
+                color: var(--color-fondo);
+                padding: 1em;
+                
+            }
+        }
+    }
+    
+}
+li a:hover{
+    padding: 1em;
+    background-color: var(--color-secundario);
+    box-shadow: 1px 1px 0.1em 0.1em var(--color-nav);
+    transition: background-color 0.3s ease; /* Transición suave para el color de fondo */
+} 
+
+.container{
+    margin-top:  24.5em;
+}
+.main-productos{
+    margin-top: 24.5em;
+}
+.mein{
+    margin-top: 24.5em;
+}
+
+
+/* *********formulario  */
+.mein{
+    margin-top: 24.5em;
+    margin-left: auto;
+    margin-right: auto;
+    padding: auto;
+    width: 52%;
+    height: 86vh;
+    background-color: var(--color-texto);
+    box-sizing: border-box;
+    border-radius: 0.4em;
+    box-shadow: 0em 0em 1.7em 0.8em var(--color-secundario);
+
+}
+.container-form{
+    width: 100%;
+    color: var(--color-fondo);
+    padding-top: 1.2em;
+    input,label,bottom{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 0.3em;
+        border-radius: 0.5em;
+        box-sizing: border-box;
+      
+        margin-top: 0.2em;
+    }
+}
+#registroForm{
+    width: 100%;
+    text-align: center;
+
+}
+
+
+}
+
+
+
+
+@media (max-width:394px) {
+    
+    .nav{
+        background-color: var(--color-primario);
+        width: 100%;
+        position: fixed;
+        top: 6em;
+        margin-top: 1em;
+        margin-bottom: 28em;
+        padding-bottom: 1em;
+        
         ul{
             display: block;
-            flex-direction: column;
-            justify-content: space-around;
-            align-items: center;
-        }
-     li{
-        list-style-type: none;
-        border: 1px solid red;
-        border-radius: 3px;
-        padding: 1em;
-        text-align: center;
-        a{
-            text-decoration: none;
-            color: rgb(255, 255, 255);
-            font-size: 100%;
-            font-weight: bold;
-            font-family: 'Times New Roman', Times, serif;
+            justify-content: center;
+            width: 100%;
+            /* flex-wrap: wrap; */
+            padding: 1.1em;
+        
+            li{
+                 /* Margen entre elementos de lista */
+                 list-style-type: none;
+                 margin: 1.3em 3.2em;  
+                 padding: 0.1em;  
+                 transition: background-color 0.3s ease; 
+                 text-align: center;
+                 a{
+                    border-radius: 0.2em;
+                    text-decoration: none;
+                    flex-direction: column;
+                    color: var(--color-fondo);
+                    padding: 1em;
+                    
+                }
             }
-      }
-    };
-    .card-container{
-        display: block;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-        gap: 0.1em;
-        box-sizing: border-box;
+        }
+        
+    }
+    li a:hover{
+        padding: 1em;
+        background-color: var(--color-secundario);
+        box-shadow: 1px 1px 0.1em 0.1em var(--color-nav);
+        transition: background-color 0.3s ease; /* Transición suave para el color de fondo */
+    } 
+    
+    .container{
+        margin-top:  24.5em;
+    }
+    .main-productos{
+        margin-top: 24.5em;
+    }
+    .mein{
+        margin-top: 24.5em;
+    }
+    
+    
+    /* *********formulario  */
+    .mein{
+        margin-top: 24em;
         margin-left: auto;
         margin-right: auto;
+        padding: auto;
+        width: 52%;
+        height: 86vh;
+        background-color: var(--color-texto);
+        box-sizing: border-box;
+        border-radius: 0.4em;
+        box-shadow: 0em 0em 1.7em 0.8em var(--color-secundario);
+    
+    }
+    .container-form{
         width: 100%;
-        margin-top: 1em;
-        margin-bottom: 1em;
-        padding: 1em;
-        font-size: 0.1em;
+        color: var(--color-fondo);
+        padding-top: 1.2em;
+        input,label,bottom{
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 0.2em;
+            padding: 0.3em;
+            border-radius: 0.5em;
+            box-sizing: border-box;
+            width: 85%;
+          
+            margin-top: 0.2em;
+        }
     }
-    .card{
-        display: block;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-        width: 60%;
-        font-size: 1.0em;
+    #registroForm{
+        width: 100%;
+        text-align: center;
+    
     }
-
-}
-
-
-/* ESTILO DE OSCAR DE SUCURSALERS */
-.business-info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 1000px;
-    width: 100%;
-    padding: 1rem;
-    margin-top: 6em;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.business-info img {
-    max-width: 50%;
-    height: auto;
-    border-radius: 8px;
-    margin-bottom: 1rem;
-}
-
-.details {
-    text-align: center;
-}
-
-.details h2 {
-    margin: 0.5rem 0;
-}
-
-.map iframe {
-    width: 100%;
-    border-radius: 8px;
-}
+    
+    
+    }
